--- a/index.html
+++ b/index.html
@@ -1,118 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Abe's Tech Support</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Roboto', sans-serif;
-      background-color: #f4f8fb;
-      display: flex;
-      justify-content: center;
-      align-items: start;
-      min-height: 100vh;
-      padding-top: 40px;
-    }
-    .card {
-      background: white;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      text-align: center;
-      max-width: 700px;
-      width: 90%;
-    }
-    h1 {
+      background-color: #f9f9f9;
       color: #333;
-      margin-bottom: 10px;
     }
-    p {
-      color: #555;
-      margin-bottom: 20px;
-      font-size: 1.1em;
-    }
-    .button {
-      display: inline-block;
-      padding: 12px 24px;
+    header {
       background-color: #0077cc;
       color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 1em;
-      transition: background-color 0.3s;
-    }
-    .button:hover {
-      background-color: #005fa3;
-    }
-    .services {
+      padding: 20px 0;
       text-align: center;
-      margin-top: 30px;
     }
-    .services h2 {
-      color: #0077cc;
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    h1, h2 {
       margin-bottom: 20px;
     }
-    .services-columns {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      flex-wrap: wrap;
+    .intro {
+      text-align: center;
+      margin-bottom: 40px;
     }
-    .services-columns ul {
+    .services {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: space-between;
+    }
+    .service-column {
+      flex: 1 1 45%;
+    }
+    .service-column ul {
       list-style-type: none;
       padding: 0;
-      text-align: left;
-      min-width: 200px;
     }
-    .services-columns li {
-      margin-bottom: 12px;
-      font-size: 1.05em;
+    .service-column li {
+      margin-bottom: 10px;
+    }
+    .cta {
+      text-align: center;
+      margin: 40px 0;
+    }
+    .cta a {
+      background-color: #0077cc;
+      color: white;
+      padding: 12px 24px;
+      text-decoration: none;
+      border-radius: 5px;
     }
     footer {
-      margin-top: 40px;
+      text-align: center;
+      padding: 20px 0;
+      background-color: #f1f1f1;
       font-size: 0.9em;
-      color: #777;
-    }
-    a {
-      color: #0077cc;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Welcome to Abe's Tech Support!</h1>
-    <p>I help all generations with their technology needs — especially the elderly. 💬</p>
-    <a href="https://forms.gle/HnteSQuDMwHsk7TT8" target="_blank" class="button">Book an Appointment</a>
-
-    <div class="services">
-      <h2>Services I Offer</h2>
-      <div class="services-columns">
+  <header>
+    <h1>Abe's Tech Support</h1>
+  </header>
+  <main>
+    <section class="intro">
+      <p>I assist individuals of all ages with their technology needs, specializing in support for the elderly.</p>
+    </section>
+    <section class="services">
+      <div class="service-column">
+        <h2>Services Offered</h2>
         <ul>
-          <li>Device setup</li>
-          <li>Troubleshooting tech problems</li>
-          <li>Passwords & account recovery</li>
-          <li>App tutoring (email, Zoom, etc.)</li>
-        </ul>
-        <ul>
-          <li>Backing up photos & documents</li>
-          <li>Cybersecurity basics</li>
-          <li>Smart TV setup</li>
-          <li>Custom tech help</li>
+          <li>Device setup (phones, tablets, computers)</li>
+          <li>Troubleshooting tech issues</li>
+          <li>Password and account recovery</li>
+          <li>App tutorials (Email, Zoom, etc.)</li>
         </ul>
       </div>
+      <div class="service-column">
+        <h2>&nbsp;</h2>
+        <ul>
+          <li>Photo and document backups</li>
+          <li>Basic cybersecurity guidance</li>
+          <li>Smart TV setup</li>
+          <li>Customized tech assistance</li>
+        </ul>
+      </div>
+    </section>
+    <div class="cta">
+      <a href="https://forms.gle/HnteSQuDMwHsk7TT8" target="_blank">Book an Appointment</a>
     </div>
-
-    <footer>
-      Questions? Email me at <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a>
-    </footer>
-  </div>
+  </main>
+  <footer>
+    <p>Contact: <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p>
+  </footer>
 </body>
 </html>
