--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
       background-color: #f4f8fb;
       display: flex;
       justify-content: center;
-      align-items: start;
-      min-height: 100vh;
-      padding-top: 40px;
+      align-items: center;
+      height: 100vh;
     }
     .card {
       background: white;
@@ -23,7 +22,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
       text-align: center;
-      max-width: 600px;
+      max-width: 400px;
     }
     h1 {
       color: #333;
@@ -47,34 +46,6 @@
     .button:hover {
       background-color: #005fa3;
     }
-    .services {
-      text-align: left;
-      margin-top: 30px;
-    }
-    .services h2 {
-      color: #0077cc;
-      margin-bottom: 10px;
-    }
-    .services ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    .services li {
-      margin-bottom: 12px;
-      font-size: 1.05em;
-      padding-left: 20px;
-      position: relative;
-    }
-    .services li::before {
-      content: '✔️';
-      position: absolute;
-      left: 0;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #777;
-    }
   </style>
 </head>
 <body>
@@ -82,23 +53,7 @@
     <h1>Welcome to Abe's Tech Support!</h1>
     <p>I help all generations with their technology needs — especially the elderly. 💬</p>
     <a href="https://forms.gle/HnteSQuDMwHsk7TT8" target="_blank" class="button">Book an Appointment</a>
-
-    <div class="services">
-      <h2>Services I Offer:</h2>
-      <ul>
-        <li>Device setup (phones, tablets, computers, smart TVs)</li>
-        <li>Troubleshooting tech problems</li>
-        <li>Helping with passwords & account recovery</li>
-        <li>Teaching how to use apps like email, Zoom, texting</li>
-        <li>Backing up photos and important documents</li>
-        <li>Basic cybersecurity help (like avoiding scams)</li>
-        <li>And more — just ask!</li>
-      </ul>
-    </div>
-
-    <footer>
-      Questions? Email me at <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a>
-    </footer>
+    <p style="margin-top: 20px;">Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p>
   </div>
 </body>
 </html>
