--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       background-color: #f4f8fb;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start; /* Aligns the card at the top of the viewport */
       height: 100vh;
       flex-direction: column;
+      padding-top: 50px; /* Adds spacing at the top of the page */
     }
     .card {
       background: white;
@@ -24,6 +25,7 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
       text-align: center;
       max-width: 400px;
+      margin-top: 50px; /* Adds more space between the top of the card and the top of the page */
       margin-bottom: 30px;
     }
     h1 {
