--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
       background-color: #f4f8fb;
       display: flex;
       justify-content: center;
-      align-items: flex-start; /* Aligns the card at the top of the viewport */
+      align-items: center;
       height: 100vh;
       flex-direction: column;
-      padding-top: 50px; /* Adds spacing at the top of the page */
     }
     .card {
       background: white;
