--- a/index.html
+++ b/index.html
@@ -25,49 +25,51 @@
        text-align: center;
        max-width: 400px;
        margin-bottom: 30px;
-    }
-    p {
-      color: #555;
-      margin-bottom: 20px;
-      font-size: 1.1em;
-    }
-    .button {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: #0077cc;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 1em;
-      transition: background-color 0.3s;
-    }
-    .button:hover {
-      background-color: #005fa3;
-    }
-    .detail-section {
-      background: #fff;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      width: 80%;
-      max-width: 600px;
-      text-align: left;
-    }
-    .detail-section h2 {
-      color: #333;
-    }
-    .detail-section p {
-      font-size: 1.1em;
-      margin-bottom: 15px;
-      color: #555;
-    }
-    .detail-section ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    .detail-section ul li {
-      margin-bottom: 10px;
-      color: #333;
+     }
+     h1 {
+       color: #333;
+       margin-bottom: 10px;
+     }
+     p {
+       color: #555;
+       margin-bottom: 20px;
+       font-size: 1.1em;
+     }
+     .button {
+       display: inline-block;
+       padding: 12px 24px;
+       background-color: #0077cc;
+       color: white;
+       text-decoration: none;
+       border-radius: 8px;
+       font-size: 1em;
+       transition: background-color 0.3s;
+     }
+     .button:hover {
+       background-color: #005fa3;
+     }
+     .detail-section {
+       background: #fff;
+       padding: 30px;
+       border-radius: 12px;
+       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+       width: 80%;
+       max-width: 600px;
+       text-align: left;
+     }
+     .detail-section h2 {
+       color: #333;
+     }
+     .computer-images {
+       display: flex;
+       justify-content: space-around;
+       margin-top: 20px;
+     }
+     .computer-images img {
+       width: 100px;
+       height: auto;
+       border-radius: 8px;
+       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
   </style>
 </head>
