--- a/index.html
+++ b/index.html
@@ -83,20 +83,17 @@
  
    <div class="detail-section">
      <h2>Our Services</h2>
-     <p>At Abe's Tech Support, we offer a variety of services to help you with your tech problems:</p>
+     <p>At Abe's Tech Support, we offer a range of services to assist you with technology. Whether you're new to it or just need help troubleshooting, we're here for you!</p>
      <ul>
-       <li>Computer setup & troubleshooting</li>
-       <li>Software installation & updates</li>
-       <li>Phone & tablet assistance</li>
-       <li>Online safety & security tips</li>
-       <li>And more — tailored to your needs!</li>
+       <li><strong>Device Setup & Configuration:</strong> Setting up your new computer, phone, or tablet to work just how you like it.</li>
+       <li><strong>Technical Troubleshooting:</strong> Fixing any software or hardware issues you're encountering, ensuring everything works smoothly.</li>
+       <li><strong>Software Installation & Updates:</strong> Installing the latest programs, apps, and ensuring your software is up to date for security and efficiency.</li>
+       <li><strong>Data Backup & Recovery:</strong> Helping you back up important files and recover lost data due to system crashes or accidental deletions.</li>
+       <li><strong>Online Safety & Security:</strong> Teaching you the best practices for online safety, including protecting your accounts and preventing scams or viruses.</li>
+       <li><strong>Virtual Assistance:</strong> Providing remote tech support to guide you through issues or questions wherever you are, via video calls or remote sessions.</li>
+       <li><strong>Customized Training:</strong> Tailoring lessons to your needs, whether it's learning how to use new apps, social media, or digital communication tools.</li>
      </ul>
- 
-     <div class="computer-images">
-       <img src="https://via.placeholder.com/100x100.png?text=Laptop" alt="Laptop">
-       <img src="https://via.placeholder.com/100x100.png?text=Phone" alt="Phone">
-       <img src="https://via.placeholder.com/100x100.png?text=Tablet" alt="Tablet">
-     </div>
+     <p>With Abe's Tech Support, you can feel confident in using your technology! We're here to guide you every step of the way.</p>
    </div>
  </body>
  </html>
