--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
    <title>Abe's Tech Support</title>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
    <style>
-     body {
-       margin: 0;
-       padding: 0;
-       font-family: 'Roboto', sans-serif;
-       background-color: #f4f8fb;
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       height: 100vh;
-       flex-direction: column;
-     }
-     .card {
-       background: white;
-       padding: 40px;
-       border-radius: 12px;
-       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-       text-align: center;
-       max-width: 400px;
-       margin-bottom: 30px;
-     }
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #f4f8fb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px; /* pushes everything down from the top */
+}
+
+.detail-section {
+  background: #fff;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+  width: 80%;
+  max-width: 600px;
+  text-align: left;
+  margin-top: 60px; /* separates it more from the top card */
+}
      h1 {
        color: #333;
        margin-bottom: 10px;
