--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #f4f8fb;
+  background: linear-gradient(135deg, #dbeafe, #f0f9ff);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 60px; /* pushes everything down from the top */
+  padding-top: 60px;
 }
 
 .detail-section {
