--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background: linear-gradient(135deg, #dbeafe, #f0f9ff);
+  background: linear-gradient(135deg, #ffe9ec, #d0f0fd);
   display: flex;
   flex-direction: column;
   align-items: center;
