--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background: linear-gradient(135deg, #f4f8fb, #e0ecf5);
-  background-image: radial-gradient(#dceeff 1px, transparent 1px);
-  background-size: 20px 20px;
+  background: linear-gradient(135deg, #ffe9ec, #d0f0fd);
   display: flex;
   flex-direction: column;
   align-items: center;
