--- a/index.html
+++ b/index.html
@@ -72,14 +72,29 @@ body {
        border-radius: 8px;
        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
      }
-   </style>
+   </style>.footer {
+  text-align: center;
+  margin-top: 60px;
+  padding: 20px;
+  color: #555;
+  font-size: 1em;
+}
+.footer a {
+  color: #0077cc;
+  text-decoration: none;
+}
+.footer a:hover {
+  text-decoration: underline;
+}
  </head>
- <body>
+ <body><footer class="footer">
+  <p>Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p>
+</footer>
    <div class="card">
      <h1>Welcome to Abe's Tech Support!</h1>
      <p>I help all generations with their technology needs — especially the elderly. 💬</p>
      <a href="https://forms.gle/HnteSQuDMwHsk7TT8" target="_blank" class="button">Book an Appointment</a>
-     <p style="margin-top: 20px;">Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p>
+  
    </div>
  
    <div class="detail-section">
