--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@ body {
        <li><strong>Customized Training:</strong> Tailoring lessons to your needs, whether it's learning how to use new apps, social media, or digital communication tools.</li>
      </ul>
      <p>With Abe's Tech Support, you can feel confident in using your technology! We're here to guide you every step of the way.</p>
+    <p style="margin-top: 20px;">Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p>
    </div>
  </body>
  </html>
