--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
      <h2>Our Services</h2>
      <p>At Abe's Tech Support, we offer a range of services to assist you with technology. Whether you're new to it or just need help troubleshooting, we're here for you!</p>
      <ul>
-       <p><strong>💵 $2 fee to claim a spot (goes toward service total)</strong></p>
+       <p><strong>🔒 Reserve your spot for just $2 — it goes *right back* to you after the session!<br>If you don’t show up without notice, a $5 no-show charge applies.</strong></p>
 <ul>
   <li><strong>($14) Device Setup & Configuration:</strong> Setting up your new computer, phone, or tablet to work just how you like it.</li>
   <li><strong>($12) Technical Troubleshooting:</strong> Fixing any software or hardware issues you're encountering, ensuring everything works smoothly.</li>
