--- a/index.html
+++ b/index.html
@@ -97,7 +97,18 @@ body {
   <li><strong>($12) Customized Training:</strong> Tailoring lessons to your needs, whether it's learning how to use new apps, social media, or digital communication tools.</li>
 </ul>
      <p>With Abe's Tech Support, you can feel confident in using your technology! We're here to guide you every step of the way.</p>
-    <p style="margin-top: 20px;">Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p>
+    <p style="margin-top: 20px;">Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p> .footer-img {
+  width: 100%;
+  max-width: 400px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+  margin-top: 40px;
+  margin-bottom: 30px;
+}.footer-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
    </div>
- </body>
+ <img src="IMG_5425.jpeg" alt="Abe's Tech Support" class="footer-img"> </body>
  </html>
