--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Abe's Tech Support</title>
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-   <style>
+   <style>.footer-img {
+  width: 200px;         /* or whatever size you want */
+  height: auto;
+  display: block;
+  margin: 40px auto 30px auto;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+}
 body {
   margin: 0;
   padding: 0;
