--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@ body {
   <li><strong>($12) Virtual Assistance:</strong> Providing remote tech support to guide you through issues or questions wherever you are, via video calls or remote sessions.</li>
   <li><strong>($12) Customized Training:</strong> Tailoring lessons to your needs, whether it's learning how to use new apps, social media, or digital communication tools.</li>
 </ul>
-      <img src="IMG_5425.jpeg" alt="Abe's Tech Support" class="footer-img"> </body>
+      
       <p>With Abe's Tech Support, you can feel confident in using your technology! We're here to guide you every step of the way.</p>
     <p style="margin-top: 20px;">Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p>.footer-img display: block;
 margin: 40px auto 30px auto; 
-   </div>
+   </div>  <img src="IMG_5425.jpeg" alt="Abe's Tech Support" class="footer-img"> </body>
  
  </html>
