--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ body {
 </ul>
       
       <p>With Abe's Tech Support, you can feel confident in using your technology! We're here to guide you every step of the way. Below is one of the payment methods offered. For more contact me.</p>
-    <p style="margin-top: 20px;">Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p> <img src="IMG_5425.jpeg" alt="Abe's Tech Support" class="footer-img"> </body><img src="IMG_4352.heic" alt="Abe's Tech Support" class="footer-img"> </body>
+    <p style="margin-top: 20px;">Questions? <br> <a href="mailto:abe4seniortech@gmail.com">abe4seniortech@gmail.com</a></p> <img src="IMG_5425.jpeg" alt="Abe's Tech Support" class="footer-img"> </body>
    </div>  
  
  </html>
